# PipeRecorder

./: CMakeLists.txt  README.md
include/: Recorder.hpp
src/: Recorder.cpp  main.cpp
